--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <hr/>
 <p><i>我喜欢打篮球，打乒乓球以及玩游戏，有机会的话一起玩嘛!</i></p>
 <p>我来自贵州省，这里风景非常好，虽然我没有去看过嘿嘿</p>
-<img width="40%" height="40%" src="C:\Users\白桐瑞\Pictures\风景.jpg"/>
+<img width="40%" height="40%" src="file:///C:/Users/%E7%99%BD%E6%A1%90%E7%91%9E/Pictures/%E9%A3%8E%E6%99%AF.jpg"/>
